--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.31.0",
     "next": "16.1.6",
+    "playwright": "^1.49.1",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
