--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "framer-motion": "^12.31.0",
+    "motion": "^12.33.0",
     "next": "16.1.6",
     "playwright": "^1.49.1",
     "react": "19.2.3",
