--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:features": "npx tsx scripts/build-font-features.ts"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.6.1",
     "motion": "^12.33.0",
     "next": "16.1.6",
     "opentype.js": "^1.3.4",
